--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   mobile_scanner: ^3.2.0
   package_info_plus: ^3.1.0
+  intl_phone_number_input: ^0.7.3+1
+  sms_autofill: ^2.3.0
 
 dev_dependencies:
   flutter_test:
