--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,4 +114,10 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.google.android.gms:play-services-mlkit-barcode-scanning:18.0.0"
+
+    implementation 'com.github.decentralised-dataexchange:ama-android-sdk:1.12.5'
+
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
+    implementation 'com.google.firebase:firebase-dynamic-links-ktx'
+
 }
