--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -119,5 +119,6 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
+    implementation 'com.github.L3-iGrant:mobileSDK-android:1.12.11'
 
 }
