--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dev_dependencies:
 flutter_icons:
   android: "ic_launcher"
   ios: true
-  image_path: "images/launcher_icon.png"
+  image_path: "images/launcher_icon_new.png"
 
 flutter:
   generate: true
