--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl_phone_number_input: ^0.7.3+1
   sms_autofill: ^2.3.0
   webview_flutter: ^4.2.0
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
