--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   sms_autofill: ^2.3.0
   webview_flutter: ^4.2.0
   page_view_dot_indicator: ^2.1.0
+  dropdown_button2: ^2.1.0
+  syncfusion_flutter_charts: ^21.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
