--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   fluttertoast: ^8.0.8
   d_chart: ^2.2.11
-  flutter_screenutil: ^5.7.0
+  flutter_screenutil: 5.7.0
   mobile_scanner: ^3.2.0
   package_info_plus: ^3.1.0
   intl_phone_number_input: ^0.7.3+1
