--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,10 +115,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.google.android.gms:play-services-mlkit-barcode-scanning:18.0.0"
 
-    implementation 'com.github.decentralised-dataexchange:ama-android-sdk:2.4.1'
+    implementation 'com.github.decentralised-dataexchange:ama-android-sdk:2.5.1'
 
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
     implementation 'com.github.L3-iGrant:mobileSDK-android:1.12.11'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
 }
