--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   page_view_dot_indicator: ^2.1.0
   dropdown_button2: ^2.1.0
   syncfusion_flutter_charts: ^21.2.4
+  firebase_crashlytics: ^3.3.0
+  firebase_core: ^2.12.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
