--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,5 +121,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
     implementation 'com.github.L3-iGrant:mobileSDK-android:1.12.11'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
 }
