--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,8 @@ def getCurrentFlavor() {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 33
@@ -98,7 +100,6 @@ android {
     productFlavors {
         dev {
             dimension "default"
-            applicationIdSuffix ".dev"
         }
         prod {
             dimension "default"
