--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
- platform :ios, '11.0'
+ platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -26,13 +26,16 @@ end
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
 flutter_ios_podfile_setup
-source 'https://github.com/L3-iGrant/covid19-global-sdk-iOS-specs.git'
 source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/hyperledger/indy-sdk.git'
+source 'https://github.com/L3-iGrant/covid19-global-sdk-iOS-specs.git'
+source 'https://github.com/portto/secp256k1.swift'
 
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
   pod 'iGrantioSDK', '~> 0.8.0'
+#  pod 'ama-ios-sdk'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
@@ -41,7 +44,13 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+#      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+#      config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+#      config.build_settings['GCC_WARN_INHIBIT_ALL_WARNINGS'] = "YES"
+#      config.build_settings['SWIFT_SUPPRESS_WARNINGS'] = "YES"
+#      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      target.build_settings(config.name)['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
     end
   end
 end
