Data wallet SDK integrated to project

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,6 @@
 # Uncomment this line to define a global platform for your project
+  install! 'cocoapods', :disable_input_output_paths => true
+
  platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
@@ -32,10 +34,11 @@ source 'https://github.com/L3-iGrant/covid19-global-sdk-iOS-specs.git'
 source 'https://github.com/portto/secp256k1.swift'
 
 target 'Runner' do
-  use_frameworks!
+#  use_frameworks!
   use_modular_headers!
+
   pod 'iGrantioSDK', '~> 0.8.0'
-#  pod 'ama-ios-sdk'
+  pod 'ama-ios-sdk'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
