--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,10 @@ android {
         }
     }
 
+    buildFeatures {
+        dataBinding = true
+    }
+
     flavorDimensions "default"
     productFlavors {
         dev {
@@ -131,8 +135,11 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
-    implementation 'com.github.L3-iGrant:mobileSDK-android:2.5.2'
-
-    implementation 'net.java.dev.jna:jna:5.6.0'
+//    implementation 'com.github.L3-iGrant:mobileSDK-android:2.5.2'
+    implementation 'com.github.decentralised-dataexchange:bb-consent-android-privacy-dashboard:2023.9.2'
+    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
+    implementation 'com.cocosw:bottomsheet:1.5.0'
+    implementation 'com.github.markomilos:paginate:1.0.0'
+    implementation 'com.github.marlonlom:timeago:4.0.3'
 
 }
