--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_core_platform_interface: 4.8.0
   firebase_crashlytics: ^3.3.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
