--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "io.igrant.data4diabetes"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -130,8 +130,9 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.google.android.gms:play-services-mlkit-barcode-scanning:18.0.0"
-
-    implementation 'com.github.decentralised-dataexchange:ama-android-sdk:2.5.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation "com.github.L3-iGrant:data_wallet:2024.4.1"
 
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
@@ -142,4 +143,28 @@ dependencies {
     implementation 'com.github.markomilos:paginate:1.0.0'
     implementation 'com.github.marlonlom:timeago:4.0.3'
 
+    implementation 'org.hyperledger:indy:1.16.0'
+    implementation 'net.java.dev.jna:jna:5.6.0'
+    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'commons-io:commons-io:2.8.0'
+    //retrofit
+    //retrofit and services
+    implementation('com.squareup.retrofit2:retrofit:2.7.1') {
+        exclude module: 'okhttp'
+    }
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.airbnb.android:lottie:3.5.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    annotationProcessor "org.greenrobot:eventbus-annotation-processor:3.1.1"
+    implementation 'com.github.koushikcse:LoadingButton:1.7'
+    implementation 'com.github.mediapark-pk:Base58-android:0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 }
