--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,33 +11,33 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.4
-  get: ^4.5.1
+  get: ^4.6.6
   flutter_svg: ^0.22.0
   dio: ^4.0.4
   shared_preferences: ^2.0.10
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.1
+  intl: ^0.19.0
   cached_network_image: ^3.2.0
   animations: ^2.0.2
   logger: ^1.1.0
   pretty_dio_logger: ^1.1.1
   font_awesome_flutter: ^9.2.0
-  fluttertoast: ^8.0.8
+  fluttertoast: ^8.2.6
   d_chart: ^2.2.11
-  flutter_screenutil: 5.7.0
-  mobile_scanner: ^3.2.0
-  package_info_plus: ^3.1.0
-  intl_phone_number_input: ^0.7.3+1
-  sms_autofill: ^2.3.0
+  flutter_screenutil: 5.9.3
+  mobile_scanner: ^5.1.1
+  package_info_plus: ^7.0.0
+  intl_phone_number_input: ^0.7.4
+  sms_autofill: ^2.4.0
   webview_flutter: ^4.4.2
   http: ^0.13.6
   page_view_dot_indicator: ^2.1.0
   dropdown_button2: ^2.1.0
   syncfusion_flutter_charts: ^21.2.4
-  firebase_core: ^2.13.0
-  firebase_core_platform_interface: 4.8.0
-  firebase_crashlytics: ^3.3.1
+  firebase_core: ^3.2.0
+  firebase_core_platform_interface: 5.1.0
+  firebase_crashlytics: ^4.0.3
   uuid: ^3.0.7
 
 dev_dependencies:
