Fix: iOS updates for release

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,8 +38,10 @@ target 'Runner' do
   use_modular_headers!
 
 # pod 'PrivacyDashboardiOS',:path => '/Users/mumthasirmohammed/bb-consent-ios-privacy-dashboard/PrivacyDashboardiOS'
- pod 'PrivacyDashboardiOS',:git =>'git@github.com:decentralised-dataexchange/bb-consent-ios-privacy-dashboard.git', :tag => '2024.4.2'
- pod 'ama-ios-sdk', :git => 'git@github.com:L3-iGrant/ama-ios-sdk.git',:tag => '2024.6.2'
+ pod 'Alamofire', '~> 5.4.1'
+ pod 'Firebase/CoreOnly', '~> 10.28.0'
+ pod 'PrivacyDashboardiOS', '2024.6.2'
+ pod 'ama-ios-sdk', '2024.6.2'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
