Fix: - Implemented basic support for push notification

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,22 @@
-buildscript {
-    ext.kotlin_version = '1.8.0'
-    repositories {
-        google()
-        mavenCentral()
-        jcenter()
-        maven { url 'https://storage.googleapis.com/download.flutter.io' }
-        maven { url "https://jitpack.io" }
-        maven { url 'https://repo.sovrin.org/repository/maven-public'}
-
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
-    }
-}
+//buildscript {
+//    ext.kotlin_version = '1.8.0'
+//    repositories {
+//        google()
+//        mavenCentral()
+//        jcenter()
+//        maven { url 'https://storage.googleapis.com/download.flutter.io' }
+//        maven { url "https://jitpack.io" }
+//        maven { url 'https://repo.sovrin.org/repository/maven-public'}
+//
+//    }
+//
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:8.2.0'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.google.gms:google-services:4.3.15'
+//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
+//    }
+//}
 
 allprojects {
     repositories {
@@ -28,7 +28,7 @@ allprojects {
         maven { url 'https://repo.sovrin.org/repository/maven-public'}
         maven {
             name = "GitHubPackages"
-            url "https://maven.pkg.github.com/L3-iGrant/ama-android-sdk"
+            url 'https://maven.pkg.github.com/L3-iGrant/ama-android-sdk'
             credentials {
                 username = "L3-iGrant"
                 password = "xxxxxxxxxxxxxxxxx"
