--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,13 +1,19 @@
 import java.util.regex.Matcher
 import java.util.regex.Pattern
-
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id 'dev.flutter.flutter-gradle-plugin'
+    id "com.google.gms.google-services"
+    id "com.google.firebase.crashlytics"
+}
 def localProperties = loadPropertiesFile('local.properties')
 def keystoreProperties = loadPropertiesFile('key.properties')
 
-def flutterRoot = localProperties.getProperty('flutter.sdk')
-if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-}
+//def flutterRoot = localProperties.getProperty('flutter.sdk')
+//if (flutterRoot == null) {
+//    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+//}
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
@@ -55,14 +61,14 @@ def getCurrentFlavor() {
     }
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
+//apply plugin: 'com.android.application'
+//apply plugin: 'kotlin-android'
+//apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+//apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 35
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -74,7 +80,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "io.igrant.data4diabetes"
         minSdkVersion 24
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -134,7 +140,7 @@ flutter {
 dependencies {
     implementation fileTree(dir: "libs", include: ['*.jar','*.aar'])
     implementation project(':libphonenumber_plugin')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.google.android.gms:play-services-mlkit-barcode-scanning:18.3.0"
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
@@ -162,7 +168,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+   // implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.airbnb.android:lottie:3.5.0'
@@ -172,5 +178,8 @@ dependencies {
     implementation 'com.github.mediapark-pk:Base58-android:0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.tbuonomo:dotsindicator:4.2'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+   // implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation "org.bouncycastle:bcprov-jdk15on:1.70"
+    implementation 'com.github.L3-iGrant:data_wallet:2025.7.1'
+
 }
