--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,5 @@
 arb-dir: lib/l10n
 template-arb-file: app_en.arb
+synthetic-package: false
+output-dir: lib/l10n/gen_l10n
 output-localization-file: app_localizations.dart
