--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,32 +12,33 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.4
   get: ^4.6.6
-  flutter_svg: ^0.22.0
+  flutter_svg: ^2.1.0
   dio: ^4.0.4
   shared_preferences: ^2.0.10
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   cached_network_image: ^3.2.0
   animations: ^2.0.2
   logger: ^1.1.0
   pretty_dio_logger: ^1.1.1
   font_awesome_flutter: ^9.2.0
-  fluttertoast: ^8.2.6
-  d_chart: ^2.2.11
+  fluttertoast: ^8.2.12
+  d_chart: 2.2.11
   flutter_screenutil: 5.9.3
   mobile_scanner: ^5.1.1
-  package_info_plus: ^7.0.0
+  package_info_plus: ^8.3.0
   intl_phone_number_input: ^0.7.4
   sms_autofill: ^2.4.0
   webview_flutter: ^4.4.2
-  http: ^0.13.6
+  http: ^1.0.0
   page_view_dot_indicator: ^2.1.0
   dropdown_button2: ^2.1.0
-  syncfusion_flutter_charts: ^21.2.4
-  firebase_core: ^3.2.0
-  firebase_core_platform_interface: 5.1.0
+  syncfusion_flutter_charts: ^29.2.10
+  firebase_core: ^3.14.0
+  firebase_core_platform_interface: 5.4.0
   firebase_crashlytics: ^4.0.3
+  firebase_messaging: ^15.0.2
   uuid: ^3.0.7
 
 dev_dependencies:
