--- a/ios/Runner/Info-Debug.plist
+++ b/ios/Runner/Info-Debug.plist
@@ -29,7 +29,11 @@
 		<string>_dartobservatory._tcp</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-    <string>Allowing camera access enables you to take pictures of your food, which we will use to calculate its calories and provide you with nutritional information. We will not access your camera for any other purpose without your permission.</string>
+	<string>Allowing camera access enables you to take pictures of your food, which we will use to calculate its calories and provide you with nutritional information. We will not access your camera for any other purpose without your permission.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
